# agent-harness

./: .gitignore  README.md  docker-compose.yml  langgraph.json  lesson_3.ipynb  middlewares-hitl.ipynb  pyproject.toml  requirements.txt  run.py
db/memory/: DDL_redis_schema.py  create_index.py  redis_ltm_schema.yaml
doc/agent_quality/: explainability.md  logging_architecture.md  observability_vs_explainability.md  running_and_debugging_strategies.md
doc/agent_sessions/: ltm.md
doc/api_contracts/: api_reference.md  frontend_integration.md
doc/capabilities/: streaming.md
doc/context_eng/: long_term_memory_implementation.md
doc/hitl/: hitl_implementation.md
doc/issues/: bedrock_converse_tool_protocol.md  windows_psycopg_eventloop_issue.md
doc/streaming/: client_integration.md  streaming.md
src/: app.py  main_graph.py
src/adapter/agent/: LanggraphAgentAdapter.py
src/adapter/embedder_provider/: AWSBedrockEmbeddingAdapter.py
src/adapter/llm_provider/: AWSBedrockLLMProviderAdapter.py
src/adapter/mcp_client/: LangchainMCPClientAdapter.py
src/adapter/rest/: rest.py  schemas.py
src/config/: AgentDependenciesContainter.py  agent_dependencies_container.py  agent_personalities.py  app_config.py
src/core/: local_tools.py  prompts.py  tools.py
src/core/langgraph/: nodes.py
src/core/ports/: agent_port.py  checkpointer_port.py  embedder_provider_port.py  llm_provider_port.py  long_term_memory_port.py  ltm_repository_port.py  short_term_memory_port.py
src/utils/: ConfigResolver.py  helpers.py  logger.py
src/utils/observability/: metrics.py
(+16 files in other folders)
