[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-aws>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langmem>=0.0.30",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
]
