[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-aws>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langmem>=0.0.30",
    "pip>=26.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]
